--- a/SmartS Marketing Management/SmartS Marketing Management.csproj
+++ b/SmartS Marketing Management/SmartS Marketing Management.csproj
@@ -212,6 +212,7 @@
     <Compile Include="Controllers\BSCCodeController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\JobFunctionController.cs" />
+    <Compile Include="Controllers\UserManagmentController.cs" />
     <Compile Include="Controllers\MiscellaneousSearchController.cs" />
     <Compile Include="Controllers\TCCodeController.cs" />
     <Compile Include="Global.asax.cs">
@@ -224,6 +225,7 @@
     <Compile Include="Models\JobDetails.cs" />
     <Compile Include="Models\JobFunctions.cs" />
     <Compile Include="Models\TcCodeModel.cs" />
+    <Compile Include="Models\UserDetails.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CodeServicesImpl.cs" />
   </ItemGroup>
@@ -271,6 +273,7 @@
     <Content Include="Views\Home\EverlyticView.cshtml" />
     <Content Include="Views\JobFunction\JobFunction.cshtml" />
     <Content Include="Views\MiscellaneousSearch\ApplicationSearch.cshtml" />
+    <Content Include="Views\UserManagment\LoginView.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
