--- a/SmartS Marketing Management/Web.config
+++ b/SmartS Marketing Management/Web.config
@@ -5,7 +5,8 @@
   -->
 <configuration>
 	<connectionStrings>
-		<add name="DBString" connectionString="Server=.\SQLExpress;Database=DB_SS_MARKETING;Data Source=LHQIT-04\SQLEXPRESS;User ID=sa;Password=mssql2019;Integrated Security=false" providerName="System.Data.SqlClient" />
+		<!--<add name="DBString" connectionString="Server=.\SQLExpress;Database=DB_SS_MARKETING;Data Source=LHQIT-04\SQLEXPRESS;User ID=sa;Password=mssql2019;Integrated Security=false" providerName="System.Data.SqlClient" />-->
+		<add name="DBString" connectionString="Server=20.120.10.53:1433;Database=DB_SS_MARKETING_PROD;Data Source=WIN-DQ03JIR971P;User ID=sa;Password=Mssql2019;Integrated Security=false" providerName="System.Data.SqlClient" />
 	</connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
